logo z-index fix

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -97,6 +97,7 @@ p {
     display: block;
     padding: 5px;
     z-index: 1;
+    position: relative;
 }
 
 .logo img {
