--- a/css/float.css
+++ b/css/float.css
@@ -95,6 +95,7 @@ p {
     display: block;
     padding: 5px;
     z-index: 1;
+    position: relative;
 }
 
 .logo img {
